--- a/inicio.html
+++ b/inicio.html
@@ -7,6 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="flex items-center justify-center min-h-screen bg-gray-100">
+
   <div class="bg-white p-6 rounded-lg shadow-md w-full max-w-sm">
     <h2 class="text-2xl font-bold mb-4 text-center">Iniciar Sesión</h2>
 
@@ -18,6 +19,11 @@
     </form>
   </div>
 
+  <script>
+    // Limpiar token y usuario al cargar la página
+    localStorage.removeItem('token');
+    localStorage.removeItem('user');
+  </script>
   <script src="login.js"></script>
 </body>
 </html>
