--- a/contacto.html
+++ b/contacto.html
@@ -1,56 +1,47 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <title>Contacto - Tienda Principal</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script async
-    src="https://maps.googleapis.com/maps/api/js?key=">
-  </script>
-  <script type="module"
-    src="https://unpkg.com/@googlemaps/extended-component-library@latest">
-  </script>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    gmp-map {
-      height: 100%;
-      width: 100%;
-      display: block;
-      border-radius: 0.5rem;
-      overflow: hidden;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Contacto - Tienda Online</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 font-sans min-h-screen flex flex-col items-center p-4">
+<body class="bg-gradient-to-br from-blue-50 via-white to-blue-100 min-h-screen font-sans flex flex-col">
+    <!-- Header -->
+    <header class="bg-gradient-to-r from-blue-600 to-blue-400 shadow-lg p-6 flex flex-col items-center rounded-b-3xl">
+        <h1 class="text-4xl font-extrabold text-white text-center mb-2 drop-shadow-lg tracking-wide">
+            Tienda Online
+        </h1>
+        <h2 class="text-lg text-blue-100 font-semibold">Contáctanos</h2>
+    </header>
 
-  <h1 class="text-3xl font-bold text-blue-700 mb-8 text-center">Contacto - Tienda Principal</h1>
+    <!-- Main Content -->
+    <main class="flex-1 flex flex-col md:flex-row max-w-5xl mx-auto w-full mt-10 bg-white rounded-2xl shadow-xl overflow-hidden">
+        <!-- Contact Info -->
+        <section class="md:w-2/5 w-full bg-white p-8 flex flex-col justify-center">
+            <div class="mb-8">
+                <h3 class="text-2xl font-bold text-blue-700 mb-4">Información de Contacto</h3>
+                <div class="space-y-2 text-gray-700">
+                    <p><span class="font-semibold">Nombre:</span> Henry Simbaña</p>
+                    <p><span class="font-semibold">Teléfono:</span> +593 98 032 3814</p>
+                    <p><span class="font-semibold">Dirección:</span> Pintag - Tolontag</p>
+                </div>
+            </div>
+            <button id="volver-link" class="bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 transition-colors duration-300 font-semibold shadow">
+                Volver
+            </button>
+        </section>
+        <!-- Map -->
+        <section class="md:w-3/5 w-full bg-blue-50 flex items-center justify-center">
+            <div id="map" class="w-full h-96 md:h-full rounded-lg shadow-inner"></div>
+        </section>
+    </main>
 
-  <!-- Contenedor principal -->
-  <div class="w-full max-w-7xl bg-white rounded-lg shadow-lg p-6 grid grid-cols-1 lg:grid-cols-2 gap-6 min-h-[60vh]">
+    <!-- Footer -->
+    <footer class="text-center mt-10 py-4 text-sm text-white bg-gradient-to-r from-blue-600 to-blue-400 shadow-inner rounded-t-2xl">
+        © 2025 Tienda Online. Todos los derechos reservados.
+    </footer>
 
-    <!-- Información -->
-    <div class="flex flex-col justify-center space-y-4 text-lg">
-      <h2 class="text-2xl font-semibold text-gray-800">Henry Simbaña</h2>
-      <p><strong class="text-gray-800">Teléfono:</strong> 0980323814</p>
-      <p><strong class="text-gray-800">Correo:</strong> <a href="mailto:henry.psc22@gmail.com" class="text-blue-600 hover:underline">henry.psc22@gmail.com</a></p>
-      <p><strong class="text-gray-800">Ubicación:</strong> Sector Pintag - Tolontag</p>
-    </div>
-
-    <!-- Mapa -->
-    <div class="min-h-[300px] md:min-h-[400px] h-full">
-      <gmp-map center="-0.328475,-78.424920" zoom="16" map-id="demo-maps">
-        <gmp-advanced-marker
-          position="-0.328475,-78.424920"
-          title="Tienda Principal - Tolontag">
-        </gmp-advanced-marker>
-      </gmp-map>
-    </div>
-  </div>
-
-  <!-- Botón de regreso -->
-  <a href="index.html" class="mt-6 inline-block bg-blue-600 text-white px-6 py-3 rounded hover:bg-blue-700 transition">
-    Volver a Inicio
-  </a>
-
+    <script src="contacto.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key="></script>
 </body>
 </html>
