--- a/detalles.html
+++ b/detalles.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Detalles del Producto</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+    <meta charset="UTF-8">
+    <title>Detalles del Producto</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 min-h-screen flex items-center justify-center p-4">
-  <div id="detalleProducto" class="bg-white p-6 rounded-lg shadow-md w-full max-w-2xl">
-    <p class="text-center text-gray-500">Cargando producto...</p>
-  </div>
+<body class="bg-gray-100 min-h-screen flex items-center justify-center">
 
-  <script src="detalles.js"></script>
+    <!-- Contenedor donde se mostrará el contenido del producto -->
+    <div id="contenedor-detalles" class="bg-white shadow-lg rounded-lg overflow-hidden w-11/12 max-w-6xl h-[80vh] flex">
+        <p class="text-gray-500 m-auto">Cargando producto...</p>
+    </div>
+
+    <!-- Enlace al archivo JavaScript externo -->
+    <script src="detalles.js"></script>
+
 </body>
 </html>
